--- a/wip-cartography/assets/css/style.css
+++ b/wip-cartography/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url("normalize.css");
 @import url("fonts.css");
+@import url("utility.css");
 
 :root {
   --transition-5: all ease-in-out .5s;
@@ -363,25 +364,31 @@ h1 {
 }
 
 .menu>div {
-  width: 200px;
+  width: 300px;
   background-color: var(--color-blur-dark);
   backdrop-filter: blur(5px);
   border-radius: 0 20px 20px 0;
   transition: var(--transition-bk);
+  box-sizing: content-box;
 }
 
 header {
-  border-radius: 0 0 var(--border-big) var(--border-big);
   display: flex;
   flex-direction: column;
   width: fit-content;
   gap: var(--spacing-l);
   margin: auto;
   margin-left: auto;
-  margin-left: var(--spacing-m);
+  margin-left: auto;
+  padding: var(--spacing-m);
+  background-color: var(--color-blur-dark);
+  backdrop-filter: blur(3px);
+  border-radius: 0 20px 20px 0;
   transition: var(--transition-bk);
-  transition: var(--transition-bk);
-
+  box-sizing: content-box;
+  border: 1px solid var(--color-blur-light);
+  border-width: 0 0 0 1px;
+  color: white;
 }
 
 header>div {
@@ -466,20 +473,21 @@ button:hover,
 
 .historyContent {
   color: var(--color-back);
-  margin: var(--spacing-s);
+  padding: var(--spacing-m);
   display: flex;
   flex-direction: column;
   font-size: 80%;
+  justify-content: space-between;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .historyList {
   color: var(--color-back);
-  margin: var(--spacing-m);
+  margin-right: var(--spacing-m);
   display: flex;
   flex-direction: column;
-  font-size: 80%;
-  height: 100%;
-  justify-content: space-between;
+  gap: var(--spacing-s);
 }
 
 .historyList div {
@@ -530,7 +538,6 @@ button:hover,
 
 .sender {
   display: block;
-  font-size: 85%;
   padding-top: var(--spacing-s);
   border-top: 1px solid var(--color-blur-light);
   position: sticky;
