--- a/jossnoname/assets/css/global.css
+++ b/jossnoname/assets/css/global.css
@@ -22,6 +22,14 @@
     max-height: 150px;
     object-fit: contain;
     width: 100%;
+    background-color: black;
+}
+
+.ring {
+    background-color: yellow;
+}
+
+.bubble {
     background-color: blue;
 }
 
