--- a/new-pablo/assets/css/output.css
+++ b/new-pablo/assets/css/output.css
@@ -544,10 +544,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -560,6 +556,10 @@ video {
   position: sticky;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .left-1\/2 {
   left: 50%;
 }
@@ -568,8 +568,8 @@ video {
   top: 50%;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.top-0 {
+  top: 0px;
 }
 
 .z-10 {
@@ -584,12 +584,12 @@ video {
   z-index: 30;
 }
 
-.m-8 {
-  margin: 2rem;
+.z-50 {
+  z-index: 50;
 }
 
-.m-6 {
-  margin: 1.5rem;
+.m-8 {
+  margin: 2rem;
 }
 
 .my-2 {
@@ -597,8 +597,8 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .ml-1 {
@@ -609,44 +609,16 @@ video {
   margin-top: 0px;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .inline {
   display: inline;
 }
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -657,76 +629,28 @@ video {
   aspect-ratio: 16 / 9;
 }
 
-.h-\[calc\(100vh-2rem\*2\)\] {
-  height: calc(100vh - 2rem * 2);
+.h-\[100px\] {
+  height: 100px;
 }
 
-.h-\[calc\(50vh-2rem\)\] {
-  height: calc(50vh - 2rem);
+.h-\[calc\(100vh-2rem\*2\)\] {
+  height: calc(100vh - 2rem * 2);
 }
 
 .h-full {
   height: 100%;
 }
 
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[calc\(100vh-2rem\*3\)\] {
-  height: calc(100vh - 2rem * 3);
-}
-
-.h-\[calc\(50vh-3rem\)\] {
-  height: calc(50vh - 3rem);
-}
-
-.h-\[calc\(100vh-2rem\*4\)\] {
-  height: calc(100vh - 2rem * 4);
-}
-
-.h-\[calc\(50vh-4rem\)\] {
-  height: calc(50vh - 4rem);
-}
-
-.h-\[calc\(50vh-2rem\*3\)\] {
-  height: calc(50vh - 2rem * 3);
-}
-
-.h-\[calc\(50vh-2rem\*2\)\] {
-  height: calc(50vh - 2rem * 2);
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-\[calc\(50vh-2rem\*1\)\] {
-  height: calc(50vh - 2rem * 1);
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-screen {
-  width: 100vw;
+.w-1\/2 {
+  width: 50%;
 }
 
-.max-w-\[400px\] {
-  max-width: 400px;
-}
-
-.max-w-\[600px\] {
-  max-width: 600px;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .-translate-x-1\/2 {
@@ -757,12 +681,16 @@ video {
   cursor: pointer;
 }
 
-.cursor-grab {
-  cursor: grab;
-}
-
 .resize {
   resize: both;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -777,16 +705,20 @@ video {
   justify-content: center;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-y-6 {
+  row-gap: 1.5rem;
 }
 
 .overflow-scroll {
@@ -809,15 +741,6 @@ video {
   border-width: 1px;
 }
 
-.border-t-0 {
-  border-top-width: 0px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .bg-special-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 250 250 / var(--tw-bg-opacity));
@@ -828,13 +751,21 @@ video {
   background-color: rgb(231 229 228 / var(--tw-bg-opacity));
 }
 
-.bg-red-900 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-special-white {
@@ -856,22 +787,8 @@ video {
   padding: 0.5rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -879,16 +796,17 @@ video {
   padding-right: 0.5rem;
 }
 
-.pl-0 {
-  padding-left: 0px;
-}
-
-.pt-0 {
-  padding-top: 0px;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pr-6 {
   padding-right: 1.5rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .align-super {
@@ -927,6 +845,14 @@ video {
   opacity: 0.6;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -936,6 +862,12 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -971,6 +903,20 @@ video {
   opacity: 0.7;
 }
 
+.hover\:opacity-100:hover {
+  opacity: 1;
+}
+
+.hover\:opacity-50:hover {
+  opacity: 0.5;
+}
+
+.hover\:transition-all:hover {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 @media (min-width: 768px) {
   .md\:mb-4 {
     margin-bottom: 1rem;
@@ -980,19 +926,19 @@ video {
     height: calc(50vh - 2rem);
   }
 
-  .md\:h-\[calc\(50vh-2rem\*2\)\] {
-    height: calc(50vh - 2rem * 2);
-  }
-
-  .md\:h-\[calc\(50vh-8\)\] {
-    height: calc(50vh - 8);
-  }
-
-  .md\:h-\[calc\(50vh-3rem\)\] {
-    height: calc(50vh - 3rem);
-  }
-
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
+  }
+
+  .md\:gap-y-6 {
+    row-gap: 1.5rem;
   }
 }
