--- a/new-pablo/assets/css/input.css
+++ b/new-pablo/assets/css/input.css
@@ -2,15 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-/* For Webkit-based browsers (Chrome, Safari and Opera) */
+
 .scrollbar-hide::-webkit-scrollbar {
     display: none;
 }
 
-/* For IE, Edge and Firefox */
 .scrollbar-hide {
     -ms-overflow-style: none;
-    /* IE and Edge */
     scrollbar-width: none;
-    /* Firefox */
+}
+
+/* 
+#infoPanel {
+    scrollbar-width: 5px;
+    scrollbar-width: thin;
+    scrollbar-width: thin;
+
+}
+
+@media only screen and (min-width: 64em) {
+    #infoPanel::scrollbar {
+        width: 5px;
+    }
+}
+
+#infoPanel::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+#infoPanel::-webkit-scrollbar-thumb {
+    background: #767676;
+}
+
+#infoPanel::-webkit-scrollbar-thumb:hover {
+    background: #767676;
+} */
+
+.shadowUp {
+    box-shadow: 0 -10px 20px white;
 }
