--- a/new-pablo/assets/css/output.css
+++ b/new-pablo/assets/css/output.css
@@ -629,6 +629,10 @@ video {
   margin-top: 1rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline {
   display: inline;
 }
@@ -668,6 +672,14 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[calc\(60vh-2rem\)\] {
+  height: calc(60vh - 2rem);
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .w-3\/5 {
@@ -1024,12 +1036,20 @@ video {
     display: none;
   }
 
+  .md\:h-\[calc\(50vh-2rem\)\] {
+    height: calc(50vh - 2rem);
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
 
   .md\:w-3\/5 {
     width: 60%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:max-w-xl {
