--- a/familia/assets/style.css
+++ b/familia/assets/style.css
@@ -55,14 +55,21 @@ a:hover {
 
     box-sizing: border-box;
     padding: 15px;
+    padding-top: 30px;
+
+}
+
+#titulo {
+    text-decoration: none !important;
 }
 
 h1 {
+
     font-weight: 400;
     font-size: 16px;
 
     padding: 6px 16px 10px 16px;
-    background-color: rgba(51, 51, 51, 0.75);
+    background-color: rgba(51, 51, 51, 1);
     backdrop-filter: blur(10px);
 
     border-radius: 4px;
@@ -77,6 +84,11 @@ h1 {
     justify-content: center;
 
     box-sizing: border-box;
+
+    transition: all .5s ease-in-out;
+
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+
 }
 
 .postal {
@@ -99,6 +111,9 @@ h1 {
 
     transition: all .3s ease-in-out, opacity .5s ease-in-out;
     opacity: 0;
+
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+
 }
 
 #imagen {
@@ -145,14 +160,97 @@ h1 {
     transition: all .5s ease-in-out;
 }
 
+.botones {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    box-sizing: border-box;
+    align-items: end;
+}
+
+.info {
+    font-weight: 400;
+    font-size: 14px;
+    color: white;
+
+    font-family: "CompagnonRoman";
+
+    padding: 6px 14px 10px 14px;
+    background-color: rgba(51, 51, 51, 1);
+    backdrop-filter: blur(10px);
+
+    border-radius: 4px;
+    width: fit-content;
+
+    border: 0;
+
+    height: fit-content;
+    transition: all .5s ease-in-out;
+
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+}
+
+.texto {
+    max-width: 375px;
+    position: absolute;
+    padding: 8px 14px 10px 14px;
+    background-color: rgba(51, 51, 51, 1);
+    backdrop-filter: blur(10px);
+    border-radius: 6px;
+    box-sizing: border-box;
+
+    z-index: -10;
+    opacity: 0;
+
+    transition: all .5s ease-in-out;
+
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+
+}
+
+.info:hover,
+.texto:hover,
+h1:hover {
+    cursor: pointer;
+    background-color: white;
+    transition: all .2s ease-in-out;
+    color: rgba(37, 37, 37, 1);
+    ;
+}
+
+
+
+@media (max-width: 600px) {
+    .content {
+        justify-content: center;
+        justify-content: space-between;
+    }
+
+    .botones {
+        bottom: 0;
+    }
+
+    .texto {
+        max-width: 80%;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        transition: none;
+    }
+}
+
 /* ANIMACIÓN INTRO */
 .fadeIn {
-    opacity: 0 !important;
+    opacity: 0;
+    z-index: -10;
     transition: all .5s ease-in-out;
 }
 
 .fadeOut {
-    opacity: 1 !important;
+    opacity: 1;
+    z-index: 999;
     transition: all .5s ease-in-out;
 }
 
@@ -192,92 +290,5 @@ h1 {
     100% {
         transform: perspective(600px) scale(1) rotate(-2deg);
         animation-timing-function: ease-in;
-    }
-}
-
-
-.botones {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    box-sizing: border-box;
-    align-items: end;
-}
-
-.info {
-    font-weight: 400;
-    font-size: 14px;
-    color: white;
-
-    font-family: "CompagnonRoman";
-
-    padding: 6px 14px 10px 14px;
-    background-color: rgba(51, 51, 51, 1);
-    backdrop-filter: blur(10px);
-
-    border-radius: 4px;
-    width: fit-content;
-
-    border: 0;
-
-    height: fit-content;
-    transition: all .5s ease-in-out;
-
-}
-
-
-
-.texto {
-    max-width: 375px;
-    position: absolute;
-    padding: 8px 14px 10px 14px;
-    background-color: rgba(51, 51, 51, 1);
-    backdrop-filter: blur(10px);
-    border-radius: 6px;
-    box-sizing: border-box;
-
-    z-index: -10;
-    opacity: 0;
-
-    transition: all .5s ease-in-out;
-}
-
-.info:hover,
-.texto:hover {
-    cursor: pointer;
-    background-color: rgba(37, 37, 37, 1);
-    transition: all .2s ease-in-out;
-}
-
-.fadeIn {
-    opacity: 0;
-    z-index: -10;
-    transition: all .5s ease-in-out;
-}
-
-.fadeOut {
-    opacity: 1;
-    z-index: 999;
-    transition: all .5s ease-in-out;
-}
-
-@media (max-width: 600px) {
-    .content {
-        justify-content: center;
-        justify-content: space-between;
-    }
-
-    .botones {
-        bottom: 0;
-    }
-
-    .texto {
-        max-width: 80%;
-    }
-}
-
-@media (prefers-reduced-motion: reduce) {
-    * {
-        transition: none;
     }
 }
