--- a/familia/assets/style.css
+++ b/familia/assets/style.css
@@ -243,14 +243,16 @@ h1:hover {
 
 /* ANIMACIÓN INTRO */
 .fadeIn {
-    opacity: 0;
-    z-index: -10;
+    opacity: 0 !important;
+    position: relative !important;
+    z-index: -10 !important;
     transition: all .5s ease-in-out;
 }
 
 .fadeOut {
-    opacity: 1;
-    z-index: 999;
+    opacity: 1 !important;
+    position: relative !important;
+    z-index: 999 !important;
     transition: all .5s ease-in-out;
 }
 
