--- a/familia/assets/style.css
+++ b/familia/assets/style.css
@@ -91,6 +91,8 @@ h1 {
 
 }
 
+
+
 .postal {
     width: 70%;
     padding: 30px 20px 30px 20px;
@@ -175,6 +177,7 @@ h1 {
 
     font-family: "CompagnonRoman";
 
+
     padding: 6px 14px 10px 14px;
     background-color: rgba(51, 51, 51, 1);
     backdrop-filter: blur(10px);
@@ -189,6 +192,7 @@ h1 {
 
     box-shadow: 0 0 10px rgba(51, 51, 51, .3);
 }
+
 
 .texto {
     max-width: 375px;
@@ -219,6 +223,34 @@ h1:hover {
 }
 
 
+/* PÁGINA INSTRUCCIONS */
+
+.botones>a {
+    text-decoration: none !important;
+}
+
+.instrucciones {
+    padding: 10px 20px 30px 20px;
+    background-color: white;
+    color: black;
+
+
+    display: grid;
+    align-items: start;
+
+    gap: 20px;
+
+    margin-bottom: 5vh;
+
+    transition: all .3s ease-in-out, opacity .5s ease-in-out;
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+
+}
+
+ul {
+    list-style: decimal;
+    margin: 0;
+}
 
 @media (max-width: 600px) {
     .content {
