--- a/familia/assets/style.css
+++ b/familia/assets/style.css
@@ -10,7 +10,7 @@
 
 
 body {
-    background-color: black;
+    background-color: rgba(37, 37, 37, 1);
     color: white;
 
     font-family: "CompagnonRoman";
@@ -26,6 +26,7 @@ a {
 p {
     margin: 0;
 }
+
 
 a {
     text-decoration: underline dotted;
@@ -165,12 +166,79 @@ h1 {
 .botones {
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     box-sizing: border-box;
     align-items: end;
+
+    position: relative;
 }
 
-.info {
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+form div {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+
+    text-transform: uppercase;
+}
+
+input,
+textarea {
+    padding: 10px 14px 10px 14px;
+    border-radius: 4px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 0;
+    height: fit-content;
+    transition: all .5s ease-in-out;
+}
+
+textarea {
+    width: 100%;
+    box-sizing: border-box;
+    height: 150px;
+    resize: none;
+}
+
+::placeholder {
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
+
+button {
+    background-color: rgb(37, 57, 228);
+
+    font-weight: 400;
+    font-size: 14px;
+    color: white;
+    font-family: "CompagnonRoman";
+    padding: 6px 14px 10px 14px;
+    border-radius: 4px;
+    width: fit-content;
+    border: 0;
+    height: fit-content;
+    transition: all .5s ease-in-out;
+}
+
+
+.boton {
     font-weight: 400;
     font-size: 14px;
     color: white;
@@ -189,12 +257,9 @@ h1 {
 
     height: fit-content;
     transition: all .5s ease-in-out;
-
-    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
 }
 
-
-.texto {
+.form {
     max-width: 375px;
     position: absolute;
     padding: 8px 14px 10px 14px;
@@ -202,6 +267,38 @@ h1 {
     backdrop-filter: blur(10px);
     border-radius: 6px;
     box-sizing: border-box;
+
+    left: 0;
+
+    z-index: -10;
+    opacity: 0;
+
+    transition: all .5s ease-in-out;
+
+    box-shadow: 0 0 10px rgba(51, 51, 51, .3);
+}
+
+.cerrar {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+.cerrar:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.texto {
+    max-width: 300px;
+    position: absolute;
+    padding: 8px 14px 10px 14px;
+    background-color: rgba(51, 51, 51, 1);
+    backdrop-filter: blur(10px);
+    border-radius: 6px;
+    box-sizing: border-box;
+
+    right: 0;
 
     z-index: -10;
     opacity: 0;
@@ -212,14 +309,14 @@ h1 {
 
 }
 
-.info:hover,
+.boton:hover,
 .texto:hover,
-h1:hover {
+h1:hover,
+button:hover {
     cursor: pointer;
     background-color: white;
     transition: all .2s ease-in-out;
     color: rgba(37, 37, 37, 1);
-    ;
 }
 
 
@@ -230,6 +327,9 @@ h1:hover {
 }
 
 .instrucciones {
+
+    width: 70%;
+
     padding: 10px 20px 30px 20px;
     background-color: white;
     color: black;
@@ -252,6 +352,13 @@ ul {
     margin: 0;
 }
 
+.instrucciones p,
+.instrucciones h4,
+.instrucciones h2,
+.instrucciones h3 {
+    margin: 0;
+}
+
 @media (max-width: 600px) {
     .content {
         justify-content: center;
@@ -263,6 +370,10 @@ ul {
     }
 
     .texto {
+        max-width: 70%;
+    }
+
+    .form {
         max-width: 80%;
     }
 }
